--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/foundation/scss/app.scss
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/foundation/scss/app.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 
-@import url('adama_fonts.css');
+@import url('general_fonts.css');
 @import 'defines';
 @import 'settings';
 @import 'foundation';
