--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/foundation/scss/app_formBuilder.scss
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/foundation/scss/app_formBuilder.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 
-@import url('adama_fonts.css');
+@import url('general_fonts.css');
 @import 'foundation';
 
 @include foundation-menu;
